amethyst/kubernetes/vaultwarden/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    # debug only
    # pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
